--- a/src/components/LikeButton/LikeButton.css
+++ b/src/components/LikeButton/LikeButton.css
@@ -1,3 +1,11 @@
+.likeButton {
+    @apply transition-all transform scale-100 hover:scale-110 active:scale-105;
+}
+
+.likeButton > div{
+    @apply h-12 w-12;
+}
+
 .withoutLike > div > svg  > path:first-child {
     fill: none;
 }
